# deploy-tool-win

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml
tests/: test_app.py  test_config.py  test_deploy.py  test_logging.py  test_main.py  test_queue.py  test_security.py  test_sync.py
webhook_deployer/: __init__.py  app.py  cli.py  config.py  deploy.py  logging.py  queue.py  security.py  sync.py
